# aport-agent-guardrails-agno

./: .env.example  .gitignore  LICENSE  README.md  oap_policy.yaml.example  pyproject.toml
.github/workflows/: ci.yml
src/aport_agent_guardrails_agno/: __init__.py  guardrail.py  policy.py  receipt.py
tests/: test_guardrail.py  test_policy.py  test_receipts.py
