[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aport-agent-guardrails-agno"
version = "0.1.0"
description = "OAP (Open Agent Protocol) guardrails for Agno AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "LiftRails Inc", email = "hello@liftrails.ca"},
]
keywords = ["agno", "guardrails", "ai", "agents", "authorization", "oap", "aport"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
agno = ["agno>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/aporthq/aport-agent-guardrails-agno"
Documentation = "https://docs.aport.io"
Repository = "https://github.com/aporthq/aport-agent-guardrails-agno"
Issues = "https://github.com/aporthq/aport-agent-guardrails-agno/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aport_agent_guardrails_agno"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=aport_agent_guardrails_agno --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
